Fix viewport being overflow on mobile for github stat

--- a/style.css
+++ b/style.css
@@ -138,3 +138,10 @@ body {
     font-size: 14px;
     color: #555;
 }
+
+#github_stat{
+    max-width: 100%;
+    width: 400px;
+    display: block;
+    margin: 0 auto;
+}
